# mcpm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S02/: S02-PLAN.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S03/: S03-PLAN.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md
src/: app.rs  config_writer.rs  discovery.rs  health.rs  main.rs  types.rs  ui.rs  wizard.rs
