[package]
name = "mcpm"
version = "1.2.1"
edition = "2024"
description = "MCP Server Manager — terminal dashboard for all your MCP servers across all clients"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
